--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
+    "@react-spring/web": "^10.0.1",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.7.0",
     "@testing-library/react": "^16.3.0",
@@ -11,11 +13,24 @@
     "@types/node": "^16.18.126",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
+    "@types/react-router-dom": "^5.3.3",
+    "autoprefixer": "^10.4.16",
+    "embla-carousel-react": "^8.6.0",
+    "lucide-react": "^0.539.0",
+    "phosphor-react": "^1.4.1",
+    "postcss": "^8.4.31",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-router-dom": "^7.8.1",
     "react-scripts": "5.0.1",
+    "react-spring": "^10.0.1",
+    "resize-observer-polyfill": "^1.5.1",
+    "simplebar": "^6.3.2",
+    "simplebar-react": "^3.3.2",
+    "tailwindcss": "^3.3.5",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "zustand": "^5.0.7"
   },
   "scripts": {
     "start": "react-scripts start",
