--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.14.1",
     "@headlessui/react": "^2.2.0",
     "@mui/material": "^7.3.1",
+    "@mui/x-date-pickers": "^8.12.0",
     "@react-spring/web": "^10.0.1",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.7.0",
@@ -18,6 +19,8 @@
     "@types/react-dom": "^18.3.1",
     "@types/react-router-dom": "^5.3.3",
     "autoprefixer": "^10.4.16",
+    "date-fns": "^4.1.0",
+    "dayjs": "^1.11.18",
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.539.0",
     "phosphor-react": "^1.4.1",
